--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -11,6 +11,7 @@
     "react-chatbot-kit": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-paginate": "^8.1.4",
     "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.1",
