--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -13,11 +13,13 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "firebase": "^9.14.0",
+    "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-chatbot-kit": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.7.1",
     "react-paginate": "^8.1.4",
     "react-responsive-carousel": "^3.2.23",
