--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -20,6 +20,7 @@
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.6.0",
     "react-circular-progressbar": "^2.0.4",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.0.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
