--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,13 +16,16 @@
     "apexcharts": "^3.35.0",
     "bootstrap": "^5.2.2",
     "framer-motion": "^6.2.9",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.6.0",
+    "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-circular-progressbar": "^2.0.4",
     "react-csv": "^2.2.2",
     "react-dom": "^18.0.0",
     "react-icons": "^4.6.0",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
